# ShaderBeam

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ShaderBeam.sln  rebuild.sh
.github/: CONTRIBUTING.md
.github/workflows/: build.yml
DXVK/lib/: libdxvk_d3d11.so.0  libdxvk_dxgi.so.0
DXVK/lib/pkgconfig/: dxvk-d3d11.pc  dxvk-dxgi.pc
GLFW/: glfw3.lib
ImGui/: CMakeLists.txt  ImGui.vcxproj  ImGui.vcxproj.filters
ImGui/backends/: imgui_frag.h  imgui_frag.hlsl  imgui_impl_dx11.cpp  imgui_vert.h  imgui_vert.hlsl
Misc/: README.txt
ShaderBeam/: CMakeLists.txt  CaptureBase.cpp  CaptureBase.h  CaptureD3D11.cpp  CaptureD3D11.h  CaptureDD.cpp  CaptureDD.h  CaptureFile.cpp  CaptureFile.h  CaptureImage.cpp  CaptureImage.h  CaptureWGC.cpp  CaptureWGC.h  Charts.cpp  Charts.h  Common.cpp  Common.h  Helpers.cpp  Helpers.h  ProggyVectorRegular.h  RenderContext.h  RenderContextD3D11.cpp  RenderContextD3D11.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  Resource.h  ShaderBeam.cpp  ShaderBeam.h  ShaderBeam.rc  ShaderBeam.vcxproj  ShaderBeam.vcxproj.filters  ShaderManager.cpp  ShaderManager.h  ShaderProfile.cpp  ShaderProfile.h  SinglePassShaderD3D11.cpp  SinglePassShaderD3D11.h  SinglePassShaderProfile.cpp  (+10 more)
ShaderBeam/Shaders/: CRTBeamSimulator.frag.h  CRTBeamSimulator.hlsl  CRTBeamSimulator.vert.h  CRTBeamSimulatorShader.h  ShaderList.h  SimpleBFIShader.h
